<resources>
    <string name="app_name">Regolith</string>

    <string name="dashboard">Dashboard</string>
    <string name="menu">Menu</string>
    <string name="grade_briefcase">Оценка портфеля</string>
    <string name="in_stock">В акциях</string>
    <string name="remaining_rub">Остаток RUB</string>
    <string name="remaining_usd">Остаток USD</string>
    <string name="refill">Пополнено</string>
    <string name="plus">+</string>
    <string name="bonus_title">Ожидаемый бонус</string>
    <string name="in_team">В команде</string>
    <string name="refill_rub">Пополнено RUB</string>
    <string name="refill_USD">Пополнено USD</string>
    <string name="withdrawn_rub">Выведено RUB</string>
    <string name="withdrawn">Выведено</string>
    <string name="stocks_profit">Прибыль с акций</string>
    <string name="invested">Инвестировано</string>
    <string name="total_price">Общая стоимость</string>
    <string name="please_wait">Please wait</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>