<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="320dp"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/profit_background"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:background="?selectableItemBackground"
            >


            <ImageView
                android:id="@+id/alert"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_alert_circle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="10dp"
                />

            <TextView
                android:id="@+id/stocks_profit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stocks_profit"
                app:fontFamily="@font/sf_medium"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="26dp"
                android:layout_marginStart="16dp"
                android:alpha="0.4"
                android:textSize="12sp"
                android:textColor="@color/black"
                />

            <TextView
                android:id="@+id/profit_usd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="145,309.39 $"
                app:fontFamily="@font/sf_bold"
                app:layout_constraintTop_toBottomOf="@id/stocks_profit"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:textSize="30sp"
                android:textColor="@color/black"
                />



            <TextView
                android:id="@+id/profit_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="78.16 %"
                app:fontFamily="@font/sf_bold"
                app:layout_constraintTop_toBottomOf="@id/profit_usd"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:textSize="16sp"
                android:textColor="@color/primary"
                />


            <TextView
                android:id="@+id/invested"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="31dp"
                android:alpha="0.4"
                android:text="@string/invested"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:fontFamily="@font/sf_medium"
                app:layout_constraintBottom_toTopOf="@id/invested_value"
                app:layout_constraintStart_toStartOf="parent"
                />


            <TextView
                android:id="@+id/total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="31dp"
                android:layout_marginEnd="16dp"
                android:alpha="0.4"
                android:text="@string/total_price"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:fontFamily="@font/sf_medium"
                app:layout_constraintBottom_toTopOf="@id/total_price_value"
                app:layout_constraintStart_toEndOf="@id/invested"
                app:layout_constraintEnd_toEndOf="parent" />


            <TextView
                android:id="@+id/invested_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="26dp"
                android:textColor="@color/black"
                app:fontFamily="@font/sf_bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/invested"
                tools:text="76,616.42 $" />



            <TextView
                android:id="@+id/total_price_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                app:fontFamily="@font/sf_bold"
                app:layout_constraintStart_toStartOf="@id/total_price"
                app:layout_constraintBottom_toBottomOf="@id/invested_value"
                tools:text="0,0 ₽" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>